@@ -111,26 +111,6 @@ EOF
     }
 }
 
-# check POST body parsing
-{
-    my $app
-        = sub { return [ 200, [ 'Content-Type' => 'text/html' ], ['boo'] ] };
-
-    my $ua = LWP::UserAgent->new( cookie_jar => {} );
-    debug_ua($ua);
-    my $server_agent = Plack::Test::Agent->new(
-        app    => $app,
-        server => 'HTTP::Server::Simple',
-        ua     => $ua,
-    );
-
-    # mostly just do a visual check that POST params are parsed
-    ok(
-        $server_agent->post( '/', [ foo => 'bar', baz => 'qux' ] ),
-        'POST param parsing'
-    );
-}
-
 # check POST body parsing that includes a file upload
 #
 # This will fail with "400 Library does not allow method POST for 'file:'
